# llm-benchmark

./: .github-placeholder  .gitignore  CLAUDE.md  LICENSE  PROGRESS.md  README.md  WINDOWS_SETUP.md  WSL_SETUP.md  benchmark.py  compare_results.py  extended_benchmark.py  pyproject.toml  run.bat  run.ps1  run.py  run.sh  setup_passwordless_sudo.sh  test_ollama.py
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v2.0-MILESTONE-AUDIT.md  v2.0-REQUIREMENTS.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
llm_benchmark/: __main__.py  analyze.py  cli.py  compare.py  comparison.py  concurrent.py  config.py  display.py  exporters.py  menu.py  models.py  preflight.py  prompts.py  recommend.py  runner.py  sweep.py  system.py
llm_benchmark/backends/: __init__.py  detection.py  llamacpp.py  lmstudio.py  ollama.py
results/: .gitignore
tests/: conftest.py  test_analyze.py  test_backends.py  test_cli.py  test_comparison.py  test_concurrent.py  test_detection.py  test_display.py  test_exporters.py  test_llamacpp.py  test_lmstudio.py  test_menu.py  test_models.py  test_package.py  test_preflight.py  test_recommend.py  test_runner.py  test_sweep.py  test_system.py
(+75 files in other folders)
