[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-benchmark"
version = "2.0.0"
description = "Measure token throughput of LLMs running via Ollama"
requires-python = ">= 3.12"
license = "MIT"
dependencies = [
    "ollama>=0.6",
    "pydantic>=2.9",
    "rich>=14.0",
    "tenacity>=9.0",
]

[project.scripts]
llm-benchmark = "llm_benchmark.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
